objects/EXPRN__Decisioning__c.object
<CustomObject>
    <description>Stores decision records from BIQ</description>
    <fields>
        <fullName>EXPRN__Application_ID__c</fullName>
        <label>Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIN__c</fullName>
        <description>Bin number of Account</description>
        <formula>EXPRN__Business__r.EXPRN__BIN_formula__c</formula>
        <label>BIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business__c</fullName>
        <label>Business Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Decisioning</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Change_Decision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It gets checked, when value changes from manual review to approve or decline and vice- versa.</description>
        <label>Changed Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Decision_Status__c</fullName>
        <formula>IF( 
ISPICKVAL(EXPRN__Decision_Override__c, &quot;Approve&quot;),TEXT(EXPRN__Decision_Override__c) + &quot; &quot; +  IMAGE(&quot;/resource/EXPRN__Approve&quot;, &quot;Approve&quot;), 
    
IF(ISPICKVAL(EXPRN__Decision_Override__c, &quot;Decline&quot;),TEXT(EXPRN__Decision_Override__c) + &quot; &quot; +  IMAGE(&quot;/resource/EXPRN__CreditDecisionDecline&quot;, &quot;Decline&quot;),

IF(ISPICKVAL(EXPRN__Decision_Override__c, &quot;Manual Review&quot;),TEXT(EXPRN__Decision_Override__c) + &quot; &quot; +  IMAGE(&quot;/resource/EXPRN__CreditDecisionManualReview&quot;, &quot;Manual Review&quot;), 
IF( 
ISPICKVAL(EXPRN__Decision__c, &quot;Approve&quot;),TEXT(EXPRN__Decision__c) + &quot;  &quot; + IMAGE(&quot;/resource/EXPRN__Approve&quot;, &quot;Approve&quot;), 
    
IF(ISPICKVAL(EXPRN__Decision__c, &quot;Decline&quot;),TEXT(EXPRN__Decision__c) + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__CreditDecisionDecline&quot;, &quot;Decline&quot;),

IF(ISPICKVAL(EXPRN__Decision__c, &quot;Manual Review&quot;),TEXT(EXPRN__Decision__c) +  IMAGE(&quot;/resource/EXPRN__CreditDecisionManualReview&quot;, &quot;Manual Review&quot;), &quot;&quot;
)
)
)
)
)
)</formula>
        <label>Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Limit1__c</fullName>
        <label>Recomended Credit Limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Limit__c</fullName>
        <label>Override Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy1__c</fullName>
        <label>Credit Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Policy</label>
        <referenceTo>EXPRN__Credit_Policy__c</referenceTo>
        <relationshipLabel>Experian Decisioning</relationshipLabel>
        <relationshipName>Decisionings_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date__c</fullName>
        <label>Prior Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Action__c</fullName>
        <label>Decision Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Override__c</fullName>
        <label>Decision Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Manual Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Reason__c</fullName>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IP score is high</fullName>
                </value>
                <value>
                    <fullName>IP score is low</fullName>
                </value>
                <value>
                    <fullName>Payment trend declining</fullName>
                </value>
                <value>
                    <fullName>Payment trend improving</fullName>
                </value>
                <value>
                    <fullName>Personal guarantee</fullName>
                </value>
                <value>
                    <fullName>Letter of credit provided</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Manual Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether a decision have changed or not</description>
        <label>Decision changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Override_Reason__c</fullName>
        <label>Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Overwritten_By__c</fullName>
        <label>Overridden By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Previous_Decision__c</fullName>
        <label>Prior Decision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Recomended_Credit_Line__c</fullName>
        <formula>EXPRN__Credit_Limit__c</formula>
        <label>Recomended Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Rule__c</fullName>
        <label>Rule</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score__c</fullName>
        <label>Percentile Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Experian Decisioning</label>
    <listViews>
        <fullName>EXPRN__Previously_Rendered_Decision1</fullName>
        <columns>EXPRN__Business__c</columns>
        <columns>EXPRN__Credit_Decision_Status__c</columns>
        <columns>NAME</columns>
        <columns>EXPRN__BIN__c</columns>
        <columns>EXPRN__Decision_Date__c</columns>
        <columns>EXPRN__Credit_Limit1__c</columns>
        <columns>EXPRN__Previous_Decision__c</columns>
        <columns>EXPRN__Decision_Override__c</columns>
        <columns>EXPRN__Date__c</columns>
        <columns>EXPRN__Overwritten_By__c</columns>
        <columns>EXPRN__Decision_Action__c</columns>
        <columns>EXPRN__Rule__c</columns>
        <filterScope>Everything</filterScope>
        <label>Previously Rendered Decision</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__Test_Decisioning_View</fullName>
        <columns>NAME</columns>
        <columns>EXPRN__Business__c</columns>
        <columns>EXPRN__Credit_Decision_Status__c</columns>
        <columns>EXPRN__Decision_Date__c</columns>
        <columns>EXPRN__Decision_Override__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>EXPRN__Override__c</columns>
        <columns>EXPRN__User_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>Test Decisioning View</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Decision details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian Decisioning</pluralLabel>
    <recordTypes>
        <fullName>EXPRN__Old_Decision</fullName>
        <active>true</active>
        <description>Old decision Record Type for Old Decision PageLayout</description>
        <label>Previous Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Recent_Decision</fullName>
        <active>true</active>
        <description>Most Recent decision for account</description>
        <label>Recent Decision</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EXPRN__For_Other_Override_Reason_mandatory</fullName>
        <active>true</active>
        <description>If reason is Other,Comment is mandatory.</description>
        <errorConditionFormula>AND( NOT(ISNEW()),  INCLUDES(EXPRN__Decision_Reason__c,&quot;Other&quot;),ISBLANK(EXPRN__Override_Reason__c))</errorConditionFormula>
        <errorDisplayField>EXPRN__Decision_Reason__c</errorDisplayField>
        <errorMessage>Please specify a reason for reason equals other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EXPRN__Override_Decision_is_Required</fullName>
        <active>false</active>
        <description>Please provide Override Decision if click on Override Decision Button</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISBLANK(TEXT(EXPRN__Decision_Override__c)))</errorConditionFormula>
        <errorDisplayField>EXPRN__Decision_Override__c</errorDisplayField>
        <errorMessage>Please Select Override Decision</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EXPRN__Reason_is_mandatory</fullName>
        <active>true</active>
        <description>If override decision , reason is mandatory</description>
        <errorConditionFormula>AND(  NOT(ISNEW()), OR(TEXT(EXPRN__Decision_Override__c)=&apos;Decline&apos;,TEXT(EXPRN__Decision_Override__c)=&apos;Approve&apos;,TEXT(EXPRN__Decision_Override__c)=&apos;Manual Decision&apos;), ISBLANK(EXPRN__Decision_Reason__c))</errorConditionFormula>
        <errorDisplayField>EXPRN__Decision_Reason__c</errorDisplayField>
        <errorMessage>Please select a Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EXPRN__Revoke_Editing_Recommended_credit_line</fullName>
        <active>true</active>
        <description>User will be able to update Recommended_credit_line only when decision = Approve and Manual Review else, user will not be allowed to do</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Recent_Decision&apos; &amp;&amp; 
TEXT( EXPRN__Decision_Override__c ) == &apos;Decline&apos; &amp;&amp;  
(NOT(ISBLANK(  EXPRN__Credit_Limit__c  )) ||  NOT(ISNULL( EXPRN__Credit_Limit__c )))</errorConditionFormula>
        <errorDisplayField>EXPRN__Credit_Limit__c</errorDisplayField>
        <errorMessage>You are not allowed to edit override credit limit when Decision is decline</errorMessage>
    </validationRules>
</CustomObject>